# ros2-crazyflie-mocap

./: .gitignore  Dockerfile  Makefile
ws/: genTraj.py  mocap_log_20260301_194029.csv  plot_mocap_log.py  trajectory.csv
ws/src/crazyflie_bridge/: package.xml  setup.py
ws/src/crazyflie_bridge/crazyflie_bridge/: crazyflie_bridge_node.py
ws/src/crazyflie_model/: package.xml  setup.py
ws/src/crazyflie_model/crazyflie_model/: crazyfliemodel.py
ws/src/crazyflie_msgs/: CMakeLists.txt  package.xml
ws/src/crazyflie_msgs/msg/: CrazyflieControlStamped.msg  CrazyflieStateStamped.msg  CrazyflieTrajectory.msg
ws/src/crazyflie_simulator/: package.xml  setup.cfg  setup.py
ws/src/crazyflie_simulator/crazyflie_simulator/: simulator_node.py
ws/src/crazyflie_simulator/launch/: simulator.launch.py  whole.launch.py
ws/src/crazyflie_viz/: package.xml  setup.cfg  setup.py
ws/src/crazyflie_viz/crazyflie_viz/: crazyflie_rviz_interface.py
ws/src/crazyflie_viz/gui/: rvizConfig.rviz
ws/src/crazyflie_viz/launch/: visualization.launch.py
ws/src/optitrack_ros2/: CMakeLists.txt  package.xml
ws/src/optitrack_ros2/src/: optitrack_node.cpp
